--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <ul>
           <li><a href="https://github.com/Robpol86/UnofficialDDNS/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Robpol86/UnofficialDDNS/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Robpol86/UnofficialDDNS/zipball/master">Download <strong>Source</strong></a></li>
           <li><a href="https://github.com/Robpol86/UnofficialDDNS">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
@@ -91,6 +91,18 @@ well.</p>
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
+          <script type="text/javascript">
+            var _gauges = _gauges || [];
+            (function() {
+              var t   = document.createElement('script');
+              t.type  = 'text/javascript';
+              t.async = true;
+              t.id    = 'gauges-tracker';
+              t.setAttribute('data-site-id', '51c6a8ff108d7b2bf8000115');
+              t.src = '//secure.gaug.es/track.js';
+              var s = document.getElementsByTagName('script')[0];
+              s.parentNode.insertBefore(t, s);
+            })();
+          </script>
   </body>
 </html>
