Gaug.es code and new download links.
1) Added the Gaug.es tracking code at the end of index.html.
2) Changed Gravatar image to a higher resolution one.
3) Added link to the wiki.
4) Changed download links to point to the installer. Used a new icon for
it too.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/Robpol86/UnofficialDDNS/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/Robpol86/UnofficialDDNS/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/Robpol86/UnofficialDDNS/zipball/master" class="download-button zip"><span>Source Code</span></a>
+          <a href="binaries/UnofficialDDNS-1.0.0.msi" class="download-button msi"><span>UnofficialDDNS-1.0.0.msi</span></a>
           <a href="https://github.com/Robpol86/UnofficialDDNS" class="code">View UnofficialDDNS on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
@@ -42,9 +42,11 @@ homeserver.mydomain.com -&gt; alfred1986.dynamicdnsprovider.info), UnofficialDDN
 records directly.</p>
 
 <p>When installed, UnofficialDDNS removes all existing A and CNAME records from the domain you specify (for example,
-homeserver.mydomain.com or mydomain.com if you'd like) and adds a new A record which the IP address of the computer
+homeserver.mydomain.com or mydomain.com if you'd like) and adds a new A record which is the IP address of the computer
 running UnofficialDDNS. By default the service checks if your IP address changed every hour, and if it fails (no
 internet, etc) it retries in 15 minutes.</p>
+
+<p>Additional information is on the <a href="https://github.com/Robpol86/UnofficialDDNS/wiki">project's wiki</a>.</p>
 
 <h2>
 <a name="supported-registrars" class="anchor" href="#supported-registrars"><span class="octicon octicon-link"></span></a>Supported Registrars</h2>
@@ -87,7 +89,7 @@ well.</p>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/Robpol86" class="avatar"><img src="https://secure.gravatar.com/avatar/2c8ea59a9c707734a836571e6b343184?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/Robpol86">Robpol86</a> maintains <a href="https://github.com/Robpol86/UnofficialDDNS">UnofficialDDNS</a></p>
+      <p><a href="https://github.com/Robpol86" class="avatar"><img src="https://secure.gravatar.com/avatar/5acddd4950fc0a928a39562c62b5da16?s=48" width="48" height="48"/></a> <a href="https://github.com/Robpol86">Robpol86</a> maintains <a href="https://github.com/Robpol86/UnofficialDDNS">UnofficialDDNS</a></p>
 
 
       </div>
@@ -113,5 +115,19 @@ well.</p>
             } catch(err) {}
           </script>
 
+            <script type="text/javascript">
+              var _gauges = _gauges || [];
+              (function() {
+                var t   = document.createElement('script');
+                t.type  = 'text/javascript';
+                t.async = true;
+                t.id    = 'gauges-tracker';
+                t.setAttribute('data-site-id', '51c6a8ff108d7b2bf8000115');
+                t.src = '//secure.gaug.es/track.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(t, s);
+              })();
+            </script>
+          
 </body>
 </html>
