--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ records directly.</p>
 
 <p>When installed, UnofficialDDNS removes all existing A and CNAME records from the domain you specify (for example,
 homeserver.mydomain.com or mydomain.com if you'd like) and adds a new A record which is the IP address of the computer
-running UnofficialDDNS. By default the service checks if your IP address changed every hour, and if it fails (no
+running UnofficialDDNS. By default the service checks if your IP address has changed every hour, and if it fails (no
 internet, etc) it retries in 15 minutes.</p>
 
 <p>Additional information is on the <a href="https://github.com/Robpol86/UnofficialDDNS/wiki">project's wiki</a>.</p>
@@ -57,7 +57,7 @@ UnofficialDDNS needs the following:</p>
 <ul>
 <li>Name.com user name.</li>
 <li>API token.</li>
-<li>The (sub)domain which will points to your server.</li>
+<li>The (sub)domain which will point to your server.</li>
 </ul><p>It might take a couple of days to get a reply from their customer support with your token.</p>
 
 <h2>
