Fixed floating top when scrolled down. Testing.

--- a/stage.html
+++ b/stage.html
@@ -121,7 +121,7 @@ well.</p>
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Robpol86/UnofficialDDNS/tarball/master" class="tar">tar</a><a href="https://github.com/Robpol86/UnofficialDDNS/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/Robpol86/UnofficialDDNS/zipball/master" class="zip">zip</a><a href="binaries/UnofficialDDNS-1.0.0.msi" class="msi">msi</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
