--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@ well.</p>
 <td>Windows Server 2012</td>
 </tr>
 </table>
+
+<h2>
+<a name="comments" class="anchor" href="#comments"><span class="octicon octicon-link"></span></a>Comments</h2>
+
+<p>
+<div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'unofficialddns'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+</p>
+
         </article>
       </div>
     </div>
@@ -100,7 +121,7 @@ well.</p>
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Robpol86/UnofficialDDNS/tarball/master" class="tar">tar</a><a href="https://github.com/Robpol86/UnofficialDDNS/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/Robpol86/UnofficialDDNS/zipball/master" class="zip">zip</a><a href="binaries/UnofficialDDNS-1.0.0.msi" class="msi">msi</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
