Added animated GIFs.
I added a couple of animated GIFs of how a usual installation/change is
done. Since this application has no front end, I wanted to put up at
least something to make it less intimidating for reluctant users. Most
of the other service software out there has no screenshots so I thought
this would differentiate my application somewhat.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,23 @@ well.</p>
 </table>
 
 <h2>
+<a name="animations" class="anchor" href="#animations"><span class="octicon octicon-link"></span></a>Animations</h2>
+
+<p>Below are a couple of animations of a typical installation on Windows Server 2012. I'm also showing how you can
+change any settings without uninstalling and reinstalling. I made these with <a href="http://blog.bahraniapps.com/?page_id=21">GifCam</a>.</p>
+
+<table>
+<tr>
+<th style="width: 50%">Installing</th>
+        <th>Changing Settings</th>
+    </tr>
+<tr>
+    <td><a href="binaries/install.gif"><img src="binaries/install.gif"/></a></td>
+    <td style="padding-right: 20px"><a href="binaries/change.gif"><img src="binaries/change.gif"/></a></td>
+</tr>
+</table>
+
+<h2>
 <a name="comments" class="anchor" href="#comments"><span class="octicon octicon-link"></span></a>Comments</h2>
 
 <p>
