Fixed image size issues in FireFox/IE
Worked in Chrome but I forgot to test in other browsers. IE and Firefox
had the animated GIFs break tables. Had to hard-code the dimensions.

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ change any settings without uninstalling and reinstalling. I made these with <a 
         <th>Changing Settings</th>
     </tr>
 <tr>
-    <td><a href="binaries/install.gif"><img src="binaries/install.gif"/></a></td>
-    <td style="padding-right: 20px"><a href="binaries/change.gif"><img src="binaries/change.gif"/></a></td>
+    <td><a href="binaries/install.gif"><img src="binaries/install.gif" width="311" height="233"/></a></td>
+    <td style="padding-right: 20px"><a href="binaries/change.gif"><img src="binaries/change.gif" width="311" height="233"/></a></td>
 </tr>
 </table>
 
