Migrated to Robpol86.com
No need for segregated Disqus/tracking.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@ change any settings without uninstalling and reinstalling. I made these with <a 
 <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'unofficialddns'; // required: replace example with your forum shortname
+        var disqus_shortname = 'rob86wiki'; // required: replace example with your forum shortname
+        var disqus_identifier = 'UnofficialDDNS';
+        var disqus_url = 'http://robpol86.com/UnofficialDDNS';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
@@ -148,7 +150,7 @@ change any settings without uninstalling and reinstalling. I made these with <a 
           </script>
           <script type="text/javascript">
             try {
-              var pageTracker = _gat._getTracker("UA-41955213-1");
+              var pageTracker = _gat._getTracker("UA-30840244-1");
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
@@ -160,7 +162,7 @@ change any settings without uninstalling and reinstalling. I made these with <a 
                 t.type  = 'text/javascript';
                 t.async = true;
                 t.id    = 'gauges-tracker';
-                t.setAttribute('data-site-id', '51c6a8ff108d7b2bf8000115');
+                t.setAttribute('data-site-id', '510780af613f5d5c05000015');
                 t.src = '//secure.gaug.es/track.js';
                 var s = document.getElementsByTagName('script')[0];
                 s.parentNode.insertBefore(t, s);
