Changed tag-line for project.
Since I'm currently only supporting Name.com, and usage is low so I don't see demand for more registrars in the near future, I'm changing the tagline in hopes that people searching for Name.com DDNS will find this project.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>UnofficialDDNS</title>
-  <meta name="description" content="A dynamic DNS service for regular registrars without native DDNS options.">
+  <meta name="description" content="An unofficial dynamic DNS (DDNS) service for Name.com domains.">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -25,7 +25,7 @@
       <h1 class="title">UnofficialDDNS</h1>
     </header>
     <div id="container">
-      <p class="tagline">A dynamic DNS service for regular registrars without native DDNS options.</p>
+      <p class="tagline">An unofficial dynamic DNS (DDNS) service for Name.com domains.</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
