Link to UnofficialDDNSnix.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ homeserver.mydomain.com or mydomain.com if you'd like) and adds a new A record w
 running UnofficialDDNS. By default the service checks if your IP address has changed every hour, and if it fails (no
 internet, etc) it retries in 15 minutes.</p>
 
-<p>Additional information is on the <a href="https://github.com/Robpol86/UnofficialDDNS/wiki">project's wiki</a>.</p>
+<p>Additional information is on the <a href="https://github.com/Robpol86/UnofficialDDNS/wiki">project's wiki</a>.
+The Linux/Unix version is <a href="https://github.com/Robpol86/UnofficialDDNSnix">UnofficialDDNSnix</a>.</p>
 
 <h2>
 <a name="supported-registrars" class="anchor" href="#supported-registrars"><span class="octicon octicon-link"></span></a>Supported Registrars</h2>
